--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2009 The Android Open Source Project
+<!--
+     Copyright (C) 2009 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -15,16 +16,14 @@
 -->
 
 <resources>
-    <string name="app_name">Jarvis</string>
-    <string name="app_descrip">Jarvis android client</string>
-    <string name="app_credits">Aaron Barnes &lt;aaron.barnes@hbcosmo.com&gt;</string>
 
+    <string name="app_name">Jarvis</string>
+    <string name="app_descrip"><![CDATA[Jarvis android client.<br /><a href="urltoupdatefrom/Jarvis.apk">Get</a> update.]]></string>
+    <string name="app_credits">Aaron Barnes\n&lt;aaron@io.net.nz&gt;</string>
     <string name="template_user_agent" translatable="false">"%1$s/%2$s (Linux; Android)"</string>
     <string name="template_wotd_title">"Wiktionary:Word of the day/%1$s %2$s"</string>
     <string name="template_define_url" translatable="false">"http://en.wiktionary.org/wiki/%s"</string>
-
-    <string name="widget_name">Wiktionary</string>
-
+    <string name="widget_name">Jarvis</string>
     <string name="widget_loading">"Loading word\nof day\u2026"</string>
     <string name="widget_error">No word of day found</string>
 
@@ -43,14 +42,14 @@
         <item>December</item>
     </string-array>
 
-
     <string name="search_label">Call</string>
     <string name="search_hint">API call</string>
-
     <string name="lookup_call">API call</string>
     <string name="lookup_about">About</string>
-
     <string name="empty_result">No entry found for this word, or problem reading data.</string>
     <string name="lookup_help">Help</string>
+    <string name="title_activity_input_dialog">InputDialog</string>
+    <string name="action_settings">Settings</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
