res/values/strings.xml: Stop linter complaining about translations

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,8 +14,7 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
 
     <string name="app_name">Jarvis</string>
     <string name="app_descrip"><![CDATA[Jarvis android client.<br /><a href="$URL">Get</a> update.]]></string>
