--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,28 +18,10 @@
 
     <string name="app_name">Jarvis</string>
     <string name="app_descrip"><![CDATA[Jarvis android client.<br /><a href="$URL">Get</a> update.]]></string>
-    <string name="app_credits">Aaron Barnes\n&lt;aaron@io.net.nz&gt;</string>
+    <string name="app_credits">Aaron Barnes &lt;aaron@io.net.nz&gt;</string>
     <string name="template_user_agent" translatable="false">"%1$s/%2$s (Linux; Android)"</string>
     <string name="template_wotd_title">"Wiktionary:Word of the day/%1$s %2$s"</string>
     <string name="template_define_url" translatable="false">"http://en.wiktionary.org/wiki/%s"</string>
-    <string name="widget_name">Jarvis</string>
-    <string name="widget_loading">"Loading word\nof day\u2026"</string>
-    <string name="widget_error">No word of day found</string>
-
-    <string-array name="month_names">
-        <item>January</item>
-        <item>February</item>
-        <item>March</item>
-        <item>April</item>
-        <item>May</item>
-        <item>June</item>
-        <item>July</item>
-        <item>August</item>
-        <item>September</item>
-        <item>October</item>
-        <item>November</item>
-        <item>December</item>
-    </string-array>
 
     <string name="search_label">Call</string>
     <string name="search_hint">API call</string>
